# sentiment-entropy-skill

./: .gitignore  INSTALL_AND_TEST.md  LICENSE  README.md  demo.py  pyproject.toml
examples/: labelled_examples.csv  rag_context_request.json  rank_request.json
sentiment_entropy_agent/: __init__.py  cli.py  core.py  http_server.py  mcp_server.py  routing.py  text_heuristic.py
tests/: run_tests.py
